      Print MAC addresses in findalldevstest.
      When necessary, trust the OS to implement ffs().
      Fix HCI_CHANNEL_MONITOR detection with musl libc.
      At build time require a proof of suitable snprintf(3) implementation in
        libc (and document Solaris 9 and MinGW as unsupported because of that).
      Makefile.in: Update the .c.o build rule (Remove hacks for old SunOS 4).
    Hurd:
      Support network capture devices too.
      Fix a few device activation bugs.
      Count and timestamp packets better.
      Add kernel filtering, fix userland filtering.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 1.10.5 libpcap release (so far!)
    Source code:
      Spell WirelessHART details properly.
      Mark pcap_vasprintf() as printf-like.
      Finalize moving of bpf_filter.c. (GH #1166)
      Remove an unneeded argument from gen_mcode6().
      Don't do some Berkeley YACC workarounds with YACC releases not
        requiring them.
      Use correct data types rather than int in some cases.
      Squelch compiler warning in grammar.c.
      Fix findalldevtest compilation if IPv6 isn't enabled.
      Rename helper routines for pcap modules to have names beginning with
        pcapint_, to avoid namespace collisions for code linking statically
        with libpcap.
      Avoid casting hack for the Windows cleanup-on-exit routine.
      Use %zu format for one case of printing a size_t.
      Fix some Coverity errors.
      Fix availabilities of some functions to match reality.
      pcap: make the seconds and microseconds/nanoseconds fields unsigned.
      Remove the unused pcap-rpcap-int.h header file.
    Thread safety:
      Make some static variables thread-local; fixes issue #1174.
    Packet filtering:
      Improve reporting of some invalid filter expressions.
      Return an error from pcap_compile() if the scanner fails to initialize.
      Optimizer fix from Archit Shah to recompute dominators after